ISDB-308 Updated new changes for test cases